@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2017 Laboratoire de Recherche et Développement
+# Copyright (C) 2017, 2020 Laboratoire de Recherche et Développement
 # de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -79,7 +79,7 @@ SCC#1
   succs: 0
 SCC#2
   states: 2
-  edges: 2->2
+  edges:
   succs: 0 1
 
 EOF
